--- a/new 5.html
+++ b/new 5.html
@@ -45,9 +45,9 @@
     function submitForm() {
       const formBaseURL = "https://docs.google.com/forms/d/e/1FAIpQLSdp4CYaItEcH74mzBMkLUkwU8qW4VsSFSUe56tYmXMO2Ex2cQ/viewform?usp=pp_url";
       const params = new URLSearchParams({
-        "entry.123456": collectedData.id_palete || "",
-        "entry.654321": collectedData.id_programa || "",
-        "entry.789012": document.getElementById('steviloKosov').value || ""
+        "entry.486792126": collectedData.id_palete || "",
+        "entry.2022164257": collectedData.id_programa || "",
+        "entry.446298209": document.getElementById('steviloKosov').value || ""
       });
       const finalURL = formBaseURL + "&" + params.toString();
       window.open(finalURL, "_blank");
