--- a/new 5.html
+++ b/new 5.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>QR → Auto-Submit with Toggle & Reset</title>
+  <title>Poraba Materiala</title>
   <script src="https://unpkg.com/html5-qrcode"></script>
   <style>
     body { font-family: sans-serif; padding: 1em; margin: 0; }
